@@ -97,7 +97,8 @@ public class ForceGenerationOptionsPanel extends JPanel implements ActionListene
     private static final int[] UNIT_TYPES = { UnitType.MEK, UnitType.TANK, UnitType.BATTLE_ARMOR, UnitType.INFANTRY,
                                               UnitType.PROTOMEK, UnitType.VTOL, UnitType.NAVAL, UnitType.CONV_FIGHTER,
                                               UnitType.AEROSPACE_FIGHTER, UnitType.SMALL_CRAFT, UnitType.DROPSHIP,
-                                              UnitType.JUMPSHIP, UnitType.WARSHIP, UnitType.SPACE_STATION };
+                                              UnitType.JUMPSHIP, UnitType.WARSHIP, UnitType.SPACE_STATION,
+                                              UnitType.ADVANCED_BUILDING };
     private static final int EARLIEST_YEAR = 2398;
     private static final int LATEST_YEAR = 3160;
     // endregion Variable Declarations
@@ -1063,7 +1064,9 @@ public class ForceGenerationOptionsPanel extends JPanel implements ActionListene
             for (String group : formationGroups.keySet()) {
                 c.insets = mainInsets;
                 if (formationGroups.get(group).contains(group)) {
-                    JRadioButton btn = new JRadioButton(FormationType.getFormationType(group).getNameWithFaction());
+                    FormationType groupFt = FormationType.getFormationType(group);
+                    JRadioButton btn = new JRadioButton(groupFt.getNameWithFaction());
+                    btn.setToolTipText(tooltipFor(groupFt));
                     if (formationBtnGroup.getButtonCount() == 0) {
                         btn.setSelected(true);
                     }
@@ -1072,14 +1075,17 @@ public class ForceGenerationOptionsPanel extends JPanel implements ActionListene
                     formationBtnGroup.add(btn);
                     formationGroups.get(group).remove(group);
                 } else {
-                    JLabel lbl = new JLabel(FormationType.getFormationType(group).getNameWithFaction(),
-                          SwingConstants.LEFT);
+                    FormationType groupFt = FormationType.getFormationType(group);
+                    JLabel lbl = new JLabel(groupFt.getNameWithFaction(), SwingConstants.LEFT);
+                    lbl.setToolTipText(tooltipFor(groupFt));
                     panFormations.add(lbl, c);
                 }
                 c.gridy++;
                 c.insets = subInsets;
                 for (String form : formationGroups.get(group)) {
-                    JRadioButton btn = new JRadioButton(FormationType.getFormationType(form).getNameWithFaction());
+                    FormationType formFt = FormationType.getFormationType(form);
+                    JRadioButton btn = new JRadioButton(formFt.getNameWithFaction());
+                    btn.setToolTipText(tooltipFor(formFt));
                     if (formationBtnGroup.getButtonCount() == 0) {
                         btn.setSelected(true);
                     }
@@ -1283,6 +1289,16 @@ public class ForceGenerationOptionsPanel extends JPanel implements ActionListene
             generatedUnits = list;
             txtNoFormation.setVisible(list == null || list.isEmpty());
         }
+
+        /**
+         * Returns the localized tooltip text for a formation, or {@code null} if no tooltip key is registered in the
+         * messages bundle. Returning {@code null} avoids showing the {@code !key!} placeholder text Swing would display
+         * if {@link Messages#getString(String)} were called for a missing key.
+         */
+        private static String tooltipFor(FormationType ft) {
+            String key = ft.getTooltipKey();
+            return Messages.keyExists(key) ? Messages.getString(key) : null;
+        }
     }
 
     @Override
@@ -1326,11 +1342,11 @@ public class ForceGenerationOptionsPanel extends JPanel implements ActionListene
                             getNumUnits()));
                 if (getNumUnits() >
                       getIntegerOption("numOtherUnits")) {
-                    params.add(params.get(0).copy());
+                    params.add(params.getFirst().copy());
                     numUnits.add(getNumUnits() -
                           getIntegerOption("numOtherUnits"));
                 }
-                params.get(0).getRoles().add(MissionRole.MECHANIZED_BA);
+                params.getFirst().getRoles().add(MissionRole.MECHANIZED_BA);
                 // BA do not count for formation rules; add as a separate formation
             }
         }
